--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     display: grid;
     gap: 0;
     grid-template-columns: "1fr 1fr 1fr 1fr";
+    max-width: 500px;
+    max-height: 500px;
 }
 
 .grid-item {
